--- a/trabalho-final/estilo/style.css
+++ b/trabalho-final/estilo/style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(to right, #2980b9, #6dd5fa, #9af5e9);
+    background: linear-gradient(to right, #1e5d86, #2c5969, #1b2b28);
     color: #61dafb;
     font-family: 'Roboto', sans-serif;
   }
@@ -17,7 +17,7 @@ body {
   
   h1 {
     font-size: 2em;
-    color: #333; 
+    color: #fff; 
   }
   
   #game-board {
@@ -65,6 +65,7 @@ body {
     font-weight: bold;
     margin-bottom: 10px;
     transition: opacity 0.3s ease;
+    color: #fff;
   }
   
   #game-status {
@@ -95,7 +96,7 @@ body {
   
   #score {
     font-size: 1.5em;
-    color: #333;
+    color: #fff;
     display: flex;
     margin-top: 20px;
   }
